Maquetacion del Sidebar

--- a/HTML5, CSS3 - BOOTSTRAP/index.html
+++ b/HTML5, CSS3 - BOOTSTRAP/index.html
@@ -104,85 +104,185 @@
                 </button>
             </div>
         </div>
-        <div class="row mt-3 col-md-10">
-            <h2>Contenido del sitio web</h2>
-            <hr />
-            <div class="card col-2 p-0 mb-3" style="width: 18rem;">
-                <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
-                    class="card-img-top" alt="..." height="150px">
-                <div class="card-body">
-                    <h5 class="card-title">Título</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="row">
+            <div class="mt-3 row col-md-9">
+                <h2 class="border-bottom border-secondary mb-3 p-3">Contenido del sitio web</h2>
+                <div class="card col-2 p-0 mb-3" style="width: 18rem;">
+                    <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
+                        class="card-img-top" alt="..." height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title">Título</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-2 p-0 mb-3" style="width: 18rem;">
+                    <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
+                        class="card-img-top" alt="..." height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title">Título</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-2 p-0 mb-3" style="width: 18rem;">
+                    <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
+                        class="card-img-top" alt="..." height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title">Título</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-2 p-0 mb-3" style="width: 18rem;">
+                    <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
+                        class="card-img-top" alt="..." height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title">Título</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-2 p-0 mb-3" style="width: 18rem;">
+                    <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
+                        class="card-img-top" alt="..." height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title">Title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+                <div class="card col-2 p-0 mb-3" style="width: 18rem;">
+                    <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
+                        class="card-img-top" alt="..." height="150px">
+                    <div class="card-body">
+                        <h5 class="card-title">Título</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                 </div>
             </div>
-            <div class="card col-2 p-0 mb-3" style="width: 18rem;">
-                <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
-                    class="card-img-top" alt="..." height="150px">
-                <div class="card-body">
-                    <h5 class="card-title">Título</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="col-md-3 mt-4">
+                <!-- Jumbotron -->
+                <div class="col">
+                    <div class="h-100 p-5 text-white bg-dark rounded-3">
+                        <h2>Sidebar</h2>
+                        <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron
+                            look. Then, mix
+                            and match with additional component themes and more.</p>
+                        <button class="btn btn-outline-light" type="button">Jumbotron</button>
+                    </div>
                 </div>
-            </div>
-            <div class="card col-2 p-0 mb-3" style="width: 18rem;">
-                <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
-                    class="card-img-top" alt="..." height="150px">
-                <div class="card-body">
-                    <h5 class="card-title">Título</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">
+                    Demo Modal
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, reiciendis!
+                                Deserunt nesciunt delectus libero nostrum. Beatae error suscipit quod repellendus?
+                                Quibusdam iste sed, sunt ex molestiae quaerat quia est ut?
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card col-2 p-0 mb-3" style="width: 18rem;">
-                <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
-                    class="card-img-top" alt="..." height="150px">
-                <div class="card-body">
-                    <h5 class="card-title">Título</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- Collapse -->
+                <p>
+                    <a class="btn btn-success mt-2" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
+                        Show | Hide
+                    </a>
+                </p>
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                        Some placeholder content for the collapse component. This panel is hidden by default but
+                        revealed when the user
+                        activates the relevant trigger.
+                    </div>
                 </div>
-            </div>
-            <div class="card col-2 p-0 mb-3" style="width: 18rem;">
-                <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
-                    class="card-img-top" alt="..." height="150px">
-                <div class="card-body">
-                    <h5 class="card-title">Título</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                <!-- Progress Bar -->
+                <div class="progress">
+                    <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 25%;"
+                        aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">0%</div>
                 </div>
-            </div>
-            <div class="card col-2 p-0 mb-3" style="width: 18rem;">
-                <img src="https://steamuserimages-a.akamaihd.net/ugc/1800852064711433998/B4D121986254F16F353654D0FF458439A77BEFF3/?imw=450&impolicy=Letterbox"
-                    class="card-img-top" alt="..." height="150px">
-                <div class="card-body">
-                    <h5 class="card-title">Título</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the
-                        card's
-                        content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
+
+                <script>
+                    var i = 0;
+                    setInterval(function () {
+                        if (i < 100) {
+                            i++;
+                            let pBar = document.querySelector("#progress-bar");
+                            pBar.style.width = i + "%";
+                            pBar.innerHTML = i + "%";
+                        };
+                    }, 500);
+                </script>
+
+                <!-- Forms -->
+                <h3 class="mt-3">Formulario</h3>
+                <form action="">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text rounded-0">Nombre</span>
+                            </div>
+                            <input type="text" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="gender">Género</label>
+                        <select name="gender" id="gender" class="form-control">
+                            <option value="male">Hombre</option>
+                            <option value="female">Mujer</option>
+                            <option value="other">Otro</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contraseña</label>
+                        <input type="password" class="form-control" />
+                    </div>
+                    <input class="btn btn-success mb-3" type="button" value="Enviar">
+                </form>
             </div>
         </div>
-
     </div>
-    <script src="./bootstrap/js/bootstrap.bundle.js"></script>
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
