Maquetacion del Footer

--- a/HTML5, CSS3 - BOOTSTRAP/index.html
+++ b/HTML5, CSS3 - BOOTSTRAP/index.html
@@ -282,6 +282,11 @@
                 </form>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 bg-dark text-white" style="height: 50px;">
+                <p class="text-center py-2 text-uppercase">&copy; Jessé Melara. Derechos Reservados 2021</p>
+            </div>
+        </div>
     </div>
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
